tests/snapshots/parser_tests__inline_arrays__empty_inline_array.snap
---
source: tests/parser_tests.rs
expression: ast
---
Document {
    children: [
        Object {
            entries: [
                ObjectEntry {
                    key: "empty",
                    key_span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 5,
                            offset: 5,
                        },
                    },
                    value: Array {
                        items: [],
                        form: Inline,
                        span: Span {
                            start: Position {
                                line: 0,
                                column: 0,
                                offset: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 5,
                                offset: 5,
                            },
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 0,
                    column: 5,
                    offset: 5,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 0,
            column: 0,
            offset: 0,
        },
        end: Position {
            line: 0,
            column: 5,
            offset: 5,
        },
    },
}
